tests/NormalTests/paczka1/fuzzy1/61508901.err
Error in line 1: 2chlRar A520 92,2
Error in line 21: S209 S529 174,8
Error in line 23: lAhAUU S529 6,8
Error in line 26: lAhAUU S2t9 62,t
Error in line 18: 2chlRar S529 7,5
Error in line 28: SBeN S529 36,72
Error in line 24: S209 A494 72,7
Error in line 35: BZcFwPOfVJ A520 4,3
Error in line 33: 2chlRar S529 2,9
